--- a/chihuahua_word.html
+++ b/chihuahua_word.html
@@ -6,10 +6,15 @@
     </head>
     <body>
         <div class="content">
-            <h1>welcome</h1>
-            <h3>Chihuahua words website</h3>
-            <a href="mailto:bennywow0413@gmail.com"><img class="icon"src="https://cdn-icons-png.flaticon.com/512/561/561127.png"></a>
+            <h1 align="center">welcome</h1>
+            <h3 align="center">Chihuahua words website</h3>
+            <div class="imagesite">
+                <a href="mailto:bennywow0413@gmail.com"><img class="icon"src="https://cdn-icons-png.flaticon.com/512/561/561127.png"></a>
+                <a href="https://youtu.be/uGCZuv0CWoo"><img class="icon"src="https://cdn-icons-png.flaticon.com/512/890/890806.png"></a>
+                <a href="https://en.wikipedia.org/wiki/Chihuahua_(dog)"><img class="icon"src="https://cdn-icons-png.flaticon.com/512/837/837799.png"></a>
+            </div>      
+            <a href="mailto:bennywow0413@gmail.com" ><img src="source/chihuahua.png" id="chiwawa" onclick="change()"></a>    
         </div>
-        
+        <script></script>
     </body>
 </html>
