--- a/chihuahua_word.html
+++ b/chihuahua_word.html
@@ -17,23 +17,35 @@
                 <a href="mailto:bennywow0413@gmail.com"><img class="icon"src="https://cdn-icons-png.flaticon.com/512/561/561127.png"></a>
                 <a href="https://youtu.be/uGCZuv0CWoo"><img class="icon"src="https://cdn-icons-png.flaticon.com/512/890/890806.png"></a>
                 <a href="https://en.wikipedia.org/wiki/Chihuahua_(dog)"><img class="icon"src="https://cdn-icons-png.flaticon.com/512/837/837799.png"></a>
+            </div>
+            <div>
+                <h2 id="transform"></h2>
+                <h4 id="spell"></h4>
+                <h4 id="word"></h4>
+                <a id="link" href=""></a>
             </div>      
             <img src="source/chihuahua.png" id="chiwawa" onclick="change()"></a>    
         </div>
         <script>
+            function generateRandomInt(min,max){
+                return Math.floor((Math.random() * (max+1 -min)) +min);
+            }
             var body = document.getElementById("background");
             var n=1;
             document.addEventListener("click", function(){
                 n++;
                 body.style.backgroundImage = 'url(source/back_ground_0'+(n%2+1)+'.jpg)';
-            });
+            }); 
             function change(){
-                setTimeout('$("h1").hide("normal")',50);
-                setTimeout('$("h3").hide("normal")',50);
-                setTimeout('$("a").hide("normal")',50);
-                $.getJSON("https://raw.githubusercontent.com/IrisLiu-coder/english_words/main/level_0"+String(Meteorite[4].lv)+".json", function(data){
-                        document.getElementById("words05").style.cssText = 'font-size: 20px; color: white; position: absolute; top: '+sinT5+'px; left: '+cosT5+'px;';
-                        document.getElementById("words05").innerText=data?.[nuM5]?.["word"];
+                var x=generateRandomInt(1,112);
+                setTimeout('$("h1").hide("normal")',150);
+                setTimeout('$("h3").hide("normal")',150);
+                setTimeout('$(".imagesite").hide("normal")',150);
+                $.getJSON("https://raw.githubusercontent.com/IrisLiu-coder/chihuahua_words/main/source/chi-words.json", function(data){
+                    document.getElementById("transform").innerText=data?.[x]?.["transform"];
+                    document.getElementById("spell").innerText=data?.[x]?.["Spell"];
+                    document.getElementById("word").innerText=data?.[x]?.["Words"];
+                    document.getElementById("link").innerHTML='<a id="link" href="'+data?.[x]?.["link"]+'"><h4 style="color:black;">點此見釋義和典故</h4></a>';
                 });  
             }
         </script>
