--- a/chihuahua_word.html
+++ b/chihuahua_word.html
@@ -3,6 +3,7 @@
         <link rel="stylesheet" href="style.css" />
         <title>Chihuahua_words</title>
         <link rel="icon" href="https://raw.githubusercontent.com/IrisLiu-coder/chihuahua_words/ea238fa1c1b1cf462782261fb1bef7a9e24743f0/source/chihuahua_icon.ico" type="image/x-icon"/>
+        <script src="active.js" charset="UTF-8"></script>
         <script
             src="https://code.jquery.com/jquery-3.6.0.min.js"
             integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
@@ -26,28 +27,5 @@
             </div>      
             <img src="source/chihuahua.png" id="chiwawa" onclick="change()"></a>    
         </div>
-        <script>
-            function generateRandomInt(min,max){
-                return Math.floor((Math.random() * (max+1 -min)) +min);
-            }
-            var body = document.getElementById("background");
-            var n=1;
-            document.addEventListener("click", function(){
-                n++;
-                body.style.backgroundImage = 'url(source/back_ground_0'+(n%2+1)+'.jpg)';
-            }); 
-            function change(){
-                var x=generateRandomInt(1,111);
-                setTimeout('$("h1").hide("normal")',150);
-                setTimeout('$("h3").hide("normal")',150);
-                setTimeout('$(".imagesite").hide("normal")',150);
-                $.getJSON("https://raw.githubusercontent.com/IrisLiu-coder/chihuahua_words/main/source/chi-words.json", function(data){
-                    document.getElementById("transform").innerText=data?.[x]?.["transform"];
-                    document.getElementById("spell").innerText=data?.[x]?.["Spell"];
-                    document.getElementById("word").innerText=data?.[x]?.["Words"];
-                    document.getElementById("link").innerHTML='<a id="link" href="'+data?.[x]?.["link"]+'"><h4 style="color:black;">點此見釋義和典故</h4></a>';
-                });  
-            }
-        </script>
     </body>
 </html>
